# album-runner

./: .gitlab-ci.yml  README.md  setup.cfg
album/runner/: __init__.py  album_runner.py  api.py
album_runner/: __init__.py  album_runner.py  api.py  logging.py
album_runner/api/: install_helper.py  run_helper.py
hips_runner/: __init__.py  hips_base.py  hips_runner.py  logging.py
hips_runner/api/: install_helper.py  run_helper.py
src/album/runner/: __init__.py  album_logging.py  album_runner.py  api.py  logging.py
src/album/runner/concept/: script_creator.py
src/album/runner/core/api/concept/: script_creator.py
src/album/runner/core/api/model/: coordinates.py  solution.py  solution_script.py
src/album/runner/core/concept/: script_creator.py
src/album/runner/core/model/: coordinates.py  script_creator.py  solution.py  solution_script.py
src/album/runner/core/schema/: solution_schema.json
src/album/runner/model/: solution.py  solution_script.py
tests/: run_all.py  test_unit_common.py
tests/integration/: test_integration_script_creator.py
tests/resources/: test_tar.tar.xz
tests/unit/: test_album_runner.py  test_api.py  test_logging.py
tests/unit/api/: test_install_helper.py
tests/unit/runner/: test_album_logging.py  test_api.py
tests/unit/runner/core/api/model/: test_isolution_script.py
tests/unit/runner/core/model/: test_coordinates.py  test_script_creator.py  test_solution.py  test_solution_script.py
