[metadata]
name = hips-runner
version = 0.1.0
description = Helmholtz Imaging Platform Solutions framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/ida-mdc/hips-runner
author = Kyle Harrington, and others
maintainer = Kyle Harrington, and others
maintainer_email = hip@kyleharrington.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Framework :: hips
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities
keywords = virtual, environments, imaging
project_urls =
    Source=https://gitlab.com/ida-mdc/hips-runner
    Tracker=https://gitlab.com/ida-mdc/hips-runner/issues

[options]
python_requires = >=3.6

