[metadata]
name = album-runner
version = 0.5.2
description = album is a tool for unifying computational tools across frameworks, languages, and environments 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/album-app/album-runner
author = Kyle Harrington, Jan Philipp Albrecht, Deborah Schmidt
maintainer = Kyle Harrington, Jan Philipp Albrecht, Deborah Schmidt
maintainer_email = album@kyleharrington.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities
keywords = virtual, environments, imaging
project_urls =
    Source=https://gitlab.com/album-app/album-runner
    Tracker=https://gitlab.com/album-app/album-runner/issues

[options]
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.6

[options.package_data]
* = *.json

[options.packages.find]
where = src